unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/bt_stripe__Stripe_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings that can be used to fine tune triggers and some other features in Blackthorn Payments.</description>
    <label>Blackthorn Pay - Trigger Settings</label>
</CustomObject>