unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Auto_Charge_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Auto_Charge_Batch_Size__c</fullName>
    <inlineHelpText>Controls the batch size of this scheduled job. The default setting is 1.</inlineHelpText>
    <label>Auto-Charge Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>