unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Automatically_Create_Allocation__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Automatically_Create_Allocation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, creates allocation records automatically for line item.</description>
    <inlineHelpText>If checked, creates allocation records automatically for line item.</inlineHelpText>
    <label>Automatically Create Allocation</label>
    <type>Checkbox</type>
</CustomField>