unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Charge_Receipt_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Charge_Receipt_Template_Id__c</fullName>
    <inlineHelpText>This field defines the Email Template that is sent for successful Transactions.</inlineHelpText>
    <label>Successful Charge Transaction Receipt</label>
    <length>20</length>
    <type>Text</type>
</CustomField>