unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Create_PaymentMethod_Spreedly_To_Gateway__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Create_PaymentMethod_Spreedly_To_Gateway__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked this copies the payment method information from the Spreedly vault to the gateway’s vault and creates a new Spreedly payment method to represent the gateway’s version.</inlineHelpText>
    <label>Save PM To Gateway Vault From Spreedly</label>
    <type>Checkbox</type>
</CustomField>