unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_All_Triggers__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_All_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, this disables all Blackthorn | Payments triggers.</inlineHelpText>
    <label>Disable All Triggers</label>
    <type>Checkbox</type>
</CustomField>