unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_Coupon_Creation__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Coupon_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disables the creation of new coupons (discounts) during subscription creation.</inlineHelpText>
    <label>Disable Coupon Creation</label>
    <type>Checkbox</type>
</CustomField>