unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_Coupon_Select__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Coupon_Select__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disables the selection of coupons (discounts) during subscription creation.</inlineHelpText>
    <label>Disable Coupon Select</label>
    <type>Checkbox</type>
</CustomField>