unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_Customer_Email_Validation__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Customer_Email_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the validation rule on the Payment Gateway Customer&#39;s email address will not fire.</description>
    <inlineHelpText>When checked, the validation rule on the Payment Gateway Customer&#39;s email address will not fire.</inlineHelpText>
    <label>Disable Customer Email Validation</label>
    <type>Checkbox</type>
</CustomField>