unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_Fingerprint_Matching__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Fingerprint_Matching__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, Do not match existing PM based on the fingerprint but instead ACH_Key__c.</description>
    <inlineHelpText>If checked, Do not match existing PM based on the fingerprint but instead ACH_Key__c.</inlineHelpText>
    <label>Disable Fingerprint Matching (ACH)</label>
    <type>Checkbox</type>
</CustomField>