unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_Opp_Assign_Default_Source__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Opp_Assign_Default_Source__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Opp Assign Default Source</label>
    <type>Checkbox</type>
</CustomField>