unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_Opp_Data_Validation__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Opp_Data_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Opp Data Validation</label>
    <type>Checkbox</type>
</CustomField>