unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_Pay_Immediately__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Pay_Immediately__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Pay Immediately</label>
    <type>Checkbox</type>
</CustomField>