unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_PaymentMethod_CleanOnClone__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_PaymentMethod_CleanOnClone__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, Stripe fields on the cloned Payment Method will not be removed. Caution! If the original Payment Method status is anything but “Valid&quot;, you will receive the same error on the cloned record.</inlineHelpText>
    <label>Disable Payment Method &quot;Clone&quot; Process</label>
    <type>Checkbox</type>
</CustomField>