unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_Price_Creation__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Price_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disables the ability to create new prices (Only existing prices can be used).</inlineHelpText>
    <label>Disable Price Creation</label>
    <type>Checkbox</type>
</CustomField>