unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_PSchedule_Compile__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_PSchedule_Compile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable PSchedule_Compile__c FLS</label>
    <type>Checkbox</type>
</CustomField>