unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_Push_to_Stripe__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Push_to_Stripe__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disables pushing the subscription to Stripe.</inlineHelpText>
    <label>Disable Push to Stripe</label>
    <type>Checkbox</type>
</CustomField>