unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_SD_DueInvoiceUpdateBatch__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_SD_DueInvoiceUpdateBatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable SD_DueInvoiceUpdateBatch</label>
    <type>Checkbox</type>
</CustomField>