unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_Set_Billing_Cycle_Anchor__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Set_Billing_Cycle_Anchor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disable the ability to set the Billing Cycle Anchor.</inlineHelpText>
    <label>Disable Set Billing Cycle Anchor</label>
    <type>Checkbox</type>
</CustomField>