unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_Stripe_Support_Currency__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Stripe_Support_Currency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the Apex validation rules will be disabled. Caution! If this custom setting is disabled, your Payment Method may fail due to not being supported by Stripe.</description>
    <inlineHelpText>If checked, the Apex validation rules will be disabled. Caution! If this custom setting is disabled, your Payment Method may fail due to not being supported by Stripe.</inlineHelpText>
    <label>Disable Stripe Support Currency</label>
    <type>Checkbox</type>
</CustomField>