unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_StripeCustomer_RolldownContactTo__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_StripeCustomer_RolldownContactTo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, Account and Contact updates on Stripe Customers are NOT rolled down to Payment Methods.</description>
    <inlineHelpText>If checked, Account and Contact updates on Stripe Customers are NOT rolled down to Payment Methods,Subscriptions,Transactions,Invoice.</inlineHelpText>
    <label>Disable Stripe Customer Rolldowns</label>
    <type>Checkbox</type>
</CustomField>