unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_StripeCustomer_Upsert__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_StripeCustomer_Upsert__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the Stripe Customer will not get created as a record in Stripe.</inlineHelpText>
    <label>Disable Creating a Stripe Customer</label>
    <type>Checkbox</type>
</CustomField>