unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_Subscription_backdating__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Subscription_backdating__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disables backdating of subscriptions during creation. (First billing can’t be in the past.)</inlineHelpText>
    <label>Disable Subscription backdating</label>
    <type>Checkbox</type>
</CustomField>