unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_Trans_Rollup_To_Account__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Trans_Rollup_To_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When setting is enabled, transactions will not roll up to related Account&#39;s &quot;Historical Account Value&quot; field.</description>
    <inlineHelpText>When setting is enabled, transactions will not roll up to related Account&#39;s &quot;Historical Account Value&quot; field.</inlineHelpText>
    <label>Disable Trans Rollup To Account</label>
    <type>Checkbox</type>
</CustomField>