unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_Trans_Rollup_To_Parent__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Trans_Rollup_To_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, deployed rollups from the Transaction to any Transaction Parents will be disabled.</description>
    <inlineHelpText>When checked, deployed rollups from the Transaction to any Transaction Parents will be disabled.</inlineHelpText>
    <label>Disable Trans Rollup To Parent</label>
    <type>Checkbox</type>
</CustomField>