unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_Transaction_CleanOnClone__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Transaction_CleanOnClone__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, Stripe and status fields on the cloned Transaction will not be removed. Caution! If the cloned Transaction status is anything but “Open”, you will not be able to capture payment.</inlineHelpText>
    <label>Disable Transaction &quot;Clone&quot; Process</label>
    <type>Checkbox</type>
</CustomField>