unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_Transaction_RollupToSchedule__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Transaction_RollupToSchedule__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, all roll-up fields under the “Status&quot; list will be disabled.</inlineHelpText>
    <label>Disable Payment Schedule Roll-up Fields</label>
    <type>Checkbox</type>
</CustomField>