unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_Transaction_RoundOnInsert__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Transaction_RoundOnInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disables the Transaction Round On Insert trigger.</inlineHelpText>
    <label>Disable Transaction Round On Insert</label>
    <type>Checkbox</type>
</CustomField>