unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_Transaction_TriggerDeclarative__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Transaction_TriggerDeclarative__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the Transaction Trigger will be disabled and the three checkboxes on Transaction (authorize, capture, refund) will not work.</inlineHelpText>
    <label>Disable Authorize, Capture, Refund Logic</label>
    <type>Checkbox</type>
</CustomField>