unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_Trials__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Trials__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This will disable the creation of trials for your customers. (Billing begins immediately).</inlineHelpText>
    <label>Disable Trials</label>
    <type>Checkbox</type>
</CustomField>