unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Disable_Update_PS_Account_Contact__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Update_PS_Account_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>By default the account &amp; contact on payment schedule if null are populated with Payment method account &amp; contact. Check this to disable this</description>
    <inlineHelpText>By default the account &amp; contact on payment schedule if null are populated with Payment method account &amp; contact. Check this to disable this</inlineHelpText>
    <label>Disable Update PS Account/Contact</label>
    <type>Checkbox</type>
</CustomField>