unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Duplicate_window__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Duplicate_window__c</fullName>
    <defaultValue>&quot;120&quot;</defaultValue>
    <description>How long, in seconds, that the Auth.net gateway should check for duplicates after a transaction is submitted.</description>
    <inlineHelpText>How long, in seconds, that the Auth.net gateway should check for duplicates after a transaction is submitted. If the value is set to 0 or to a negative number, no duplicate transaction window will be enforced. The maximum value is 28800, which equals eight hours. If a value greater than 28800 sent, the payment gateway will default to 28800.</inlineHelpText>
    <label>Duplicate window</label>
    <length>5</length>
    <type>Text</type>
</CustomField>