unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Enable_ACH__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Enable_ACH__c</fullName>
    <inlineHelpText>This enables ACH Record Type and Page Layout on the Payment Method object. Configured in Setup Wizard. Do Not Update Here, use the Setup Wizard instead for changes.</inlineHelpText>
    <label>Enable ACH</label>
    <length>4</length>
    <type>Text</type>
</CustomField>