unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Enable_ACH_V2__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Enable_ACH_V2__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Reference our documentation to learn more about ACH Payment Intents / ACHv2.</inlineHelpText>
    <label>Enable Payment Intents for ACH PMs</label>
    <type>Checkbox</type>
</CustomField>