unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Enable_Auth_Trans_Rollup_on_WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Enable_Auth_Trans_Rollup_on_WorkOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, Authorized transactions are included with Captured transactions in Balance Paid rollup field on the Work Order.</description>
    <label>Enable Auth Trans Rollup on WorkOrder</label>
    <type>Checkbox</type>
</CustomField>