unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Enable_Change_Data_Capture__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Enable_Change_Data_Capture__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Use this to enable batch/scheduled/future method to allow data to be pushed to Stripe.</inlineHelpText>
    <label>Enable Change Data Capture</label>
    <type>Checkbox</type>
</CustomField>