unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Enable_p360_All__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Enable_p360_All__c</fullName>
    <inlineHelpText>If Yes, this means Blackthorn | Payments Admin permission set will be assigned to all users in your Org. Configured in Setup Wizard. Do Not Update Here, use the Setup Wizard instead for changes.</inlineHelpText>
    <label>Enable Blackthorn Payments for All Users</label>
    <length>4</length>
    <type>Text</type>
</CustomField>