unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Enable_SCA__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Enable_SCA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable SCA</label>
    <type>Checkbox</type>
</CustomField>