unpackaged/main/default/objects/bt_stripe__Stripe_Settings__c/fields/bt_stripe__Enable_Transaction_MinAmount_Validation__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Enable_Transaction_MinAmount_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, transaction amount needs to be greater than the min amount specified by custom metadata for the given currency else an error is thrown.</description>
    <inlineHelpText>If checked, transaction amount needs to be greater than the min amount specified by custom metadata for the given currency else an error is thrown.</inlineHelpText>
    <label>Enable Transaction Min Amount Validation</label>
    <type>Checkbox</type>
</CustomField>